<resources>
    <string name="app_name">The Launcher</string>
    <string name="text">makan bang</string>
    <string name="button_label_toast">Max</string>
    <string name="button_label_count">count</string>
    <string name="count_initial_value">0</string>
    <string name="button_label_back">back</string>
    <string name="toast_message">Fibonacci Sequence</string>
    <string name="toast_max_message">Sudah mencapai max</string>
    <string name="article_title">Kasus Sianida</string>
    <string name="article_subtitle">ICE COLD</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the Let It Be album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series. For more information, see the Beatles Time Capsule at www.rockument.com. \n\n This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on The Lost Lennon Tapes Vol. 28, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions. \n\n

Highlights include: \n\n

Cry for a Shadow – Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs. \n\n

My Bonnie and Ain’t She Sweet — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal). \n\n

Searchin — A Jerry Leiber – Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys! \n\n

Love Me Do — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version. \n\n

She Loves You – Till There Was You – Twist and Shout — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark. \n\n

Leave My Kitten Alone — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker. \n\n

One After 909 — A song recorded for the ¨C11C album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R B feel to it.</string>
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="textHeader_reply">Reply Received</string>
    <string name="button_alarm">Alarm</string>
    <string name="btnHello">Project Hello</string>
    <string name="btnCount">Project Count</string>
    <string name="btnScrollice">Project Sianida</string>
    <string name="btnTwoAct">Project Two Activity</string>
    <string name="btnAlarm">Project Set Alarm</string>
    <string name="btnMaps">Maps</string>
    <string name="fps1title">Doom: Eternal</string>
    <string name="fps1info">Tanggal Rilis: 29 Maret 2020 \n\nPengembang: id Software \n\nPenerbit: Bethesda Softworks</string>
    <string name="fps1syn">Dalam sekuel Doom (2016) ini, Neraka telah menguasai Bumi, jadi terserah pada Doom Slayer, mesin pembunuh iblis pamungkas yang diciptakan oleh kekuatan mistik, untuk mencabik-cabik kekuatan Neraka. Namun, Neraka tidak sendirian dalam pertarungan ini.</string>
    <string name="fps2title">Halo: Combat Evolved</string>
    <string name="fps2info">Tanggal Rilis: 15 November 2001 \n\nPengembang: Bungie \n\nPenerbit: Microsoft Game Studios</string>
    <string name="fps2syn">Umat manusia sedang dihancurkan oleh konglomerat ras alien yang semuanya berada di bawah bendera Covenant. Sebuah pesawat luar angkasa manusia diserang dan tidak memiliki kesempatan untuk bertahan hidup, dan sekarang satu-satunya harapan bagi umat manusia adalah Master Chief yang ditempa Spartan-II untuk memastikan Covenant tidak menguasai AI kapal, dan dengan demikian menemukan lokasi Bumi. Namun, para penumpang yang selamat terdampar di sebuah planet asing yang aneh bernama Halo, dan semuanya bertumpuk melawan mereka. Ini menjadi pertempuran yang menegangkan saat para kru pemberani, yang dipimpin oleh Master Chief dan AI Cortana, mencoba bertahan dari serangan Covenant.</string>
    <string name="fps3title">Half Life</string>
    <string name="fps3info">Tanggal Rilis: 19 November 1998 \n\nPengembang: Valve \n\nPenerbit: Sierra Studios</string>
    <string name="fps3syn">Dalam Half-Life, Anda bermain sebagai Gordon Freeman. Freeman baru saja memulai kariernya di divisi Material Anomali di Fasilitas Penelitian Black Mesa yang sangat besar dan berada di bawah tanah di New Mexico. Secara kebetulan, fasilitas ini mendapatkan kendali atas artefak alien misterius, dan membuka celah antar dimensi dengan dunia alien, membuat fasilitas ini berantakan. Freeman harus meminta bantuan militer, tetapi dalam prosesnya akhirnya memanggil marinir AS dan mereka tidak hanya ingin membunuh alien, mereka ingin membunuh semua personel yang terkait dengan Black Mesa! Dia dipaksa untuk menembak, menghancurkan, dan memanjat melalui laboratorium yang hancur, silo rudal yang ditinggalkan, dan area permukaan yang luas untuk melarikan diri dari militer, dan Black Mesa!</string>
    <string name="fps4title">Wolfenstein: The New Order</string>
    <string name="fps4info">Tanggal Rilis: 20 Mei 2014 \n\nPengembang: MachineGames \n\nPenerbit: Bethesda Softworks</string>
    <string name="fps4syn">The New Order berlatar belakang alam semesta alternatif di mana Nazi Jerman telah berhasil menggunakan teknologi canggih, memungkinkan mereka untuk membalikkan keadaan melawan Sekutu dan pada akhirnya memenangkan Perang Dunia II, mengambil alih sebagian besar dunia. Alur ceritanya secara longgar terhubung dengan Wolfenstein tahun 2009 dan menampilkan karakter yang kembali, pemimpin Kreisau Circle Caroline Becker dan SS-Oberst-Gruppenführer Wilhelm "Deathshead" Strasse, musuh bebuyutan protagonis seri, operasi pasukan khusus AS Kapten William "B.J." Blazkowicz.</string>
    <string name="RPG1title">Final Fantasy VII Remake</string>
    <string name="RPG1info">Tanggal Rilis: 10 April 2020 \n\n Pengembang: Square Enix \n\nPenerbit: Square Enix</string>
    <string name="RPG1syn">Remake dari sebuah game Final Fantasy VII (1997). Seorang mantan tentara bergabung dengan kelompok eco-terrorist dalam sebuah misi melawan perusahaan listrik tempat dia bekerja untuk melindungi planet ini dan semua yang tinggal di dalamnya.</string>
    <string name="RPG2title">Persona 4</string>
    <string name="RPG2info">Tanggal Rilis: 10 Juli 2008 \n\nPengembang: Atlus \n\nPenerbit: Atlus, Square Enix, NIS America, Sega</string>
    <string name="RPG2syn">Sekelompok siswa sekolah menengah menemukan dunia TV tersembunyi yang disebut The Midnight Channel, sebuah realitas alternatif yang dipenuhi dengan bayangan yang digunakan untuk melakukan pembunuhan. Setelah terbangun dengan kepribadian mereka, kelompok ini memutuskan untuk menyelidiki.</string>
    <string name="RPG3title">Fallout 3</string>
    <string name="RPG3info">Tanggal Rilis: 28 October 2008 \n\nPengembang: Bethesda Game Studios \n\nPenerbit: Bethesda Softworks</string>
    <string name="RPG3syn">Di masa depan yang jauh di mana Bumi telah menjadi gurun yang hancur, Anda adalah anak dari ilmuwan terkenal James di Vault 101 bawah tanah yang berada di wilayah Washington DC. Setelah mencapai usia dewasa, ayah Anda secara misterius menghilang ke dunia luar untuk suatu tujuan yang tidak diketahui. Tak lama kemudian, kamu terpaksa melarikan diri ke luar dari tirani pembunuh Vault Overseer yang tidak akan mentolerir perbedaan pendapat. Sekarang, Anda akan mulai mencari ayah Anda seiring dimulainya petualangan Anda yang akan membawa harapan bagi dunia yang suram atau menghancurkannya.</string>
    <string name="RPG4title">"Baldur's Gate 3"</string>
    <string name="RPG4info">Tanggal Rilis: 3 Agustus 2023 \n\nPengembang: Larian Studios \n\nPenerbit: Larian Studios</string>
    <string name="RPG4syn">"Baldur's Gate 3 adalah permainan video bermain peran dengan elemen pemain tunggal dan multipemain kooperatif. Pemain dapat membuat satu atau beberapa karakter dan membentuk party bersama sejumlah karakter yang telah dibuat sebelumnya untuk menjelajahi cerita game. Secara opsional, pemain dapat mengambil salah satu karakter mereka dan bergabung secara online dengan pemain lain untuk membentuk party. Permainan ini menerapkan sistem pencarian yang fleksibel dengan berbagai pendekatan untuk menyelesaikan sebagian besar pencarian. Pemain dapat menghilangkan hampir semua karakter non-pemain, terlepas dari pentingnya mereka dalam alur cerita, namun masih terus maju melalui permainan, permainan ini dibagi menjadi tiga babak, masing-masing berlangsung di wilayah yang berbeda di dunia.
        Dalam babak-babak ini, gim ini mengadopsi format dunia terbuka, yang memungkinkan pemain untuk menyelesaikan misi dalam urutan apa pun."</string>
    <string name="fg1title">Street Fighter 6</string>
    <string name="fg1info">Tanggal Rilis: 2 Juni 2023 \n\nPengembang: Capcom \n\nPenerbit: Capcom</string>
</resources>